Finished Profile Website

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </nav>
     <nav id="menu-nav">
-        <div class="logo">Amanuel Tesfaye</div>
+        <div class="logo"></div>
         <div class="menu">
             <div class="menu-icon" onclick="toggleMenu()">
              <span></span>   
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/amanprofile.png" alt="Amanuel Tesfaye">
+            <img src="./assets/amansenior.jpg" alt="Amanuel Tesfaye">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello I'm</p>
@@ -59,7 +59,7 @@
         <h1 class="title">About Me</h1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="./assets/gitpic.png" alt="profile" class="about-pic"/>
+                <img src="./assets/amanprofile.png" alt="profile" class="about-pic"/>
             </div>
             <div class="about-details-container">
                 <div class="about-containers">
@@ -75,11 +75,162 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque facere consectetur saepe omnis culpa reiciendis veritatis velit. Atque earum, pariatur, eveniet in sed voluptate iure, animi ullam reiciendis cumque accusamus maiores vero vitae enim porro. Quaerat non, provident, modi ipsa reiciendis culpa consequuntur possimus quasi dolorem hic accusamus, ea rerum? </p>
+                    <p>Hello. My name is Amanuel Tesfaye. I am a senior at Columbia Heights Educational Campus. I aspire to become an Machine Learning Engineer through pursuing a post-secondary education. I am now practicing coding and robotics to prepare. I enjoy sports such as football and soccer.</p>
                 </div>
             </div>
         </div>
         <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#experience'"/>
+    </section>
+    <section id="experience">
+        <p class="section__text__p1">Explore My</p>
+        <h1 class="title">Experience</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Coding Experience</h2>
+                    <div class="article-container">
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                            <div>
+                                <h3>HTML</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                            <div>
+                                <h3>CSS</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                            <div>
+                                <h3>Python</h3>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                            <div>
+                                <h3>Java</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                            <div>
+                                <h3>JavaScript</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                            <div>
+                                <h3>Django</h3>
+                                <p>Basic</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="details-container">
+                    <h2 class="experience-sub-title">High School</h2>
+                    <div class="article-container">
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                            <div>
+                                <h3>TSA</h3>
+                                <p>2 years</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                            <div>
+                                <h3>STEM Ready</h3>
+                                <p>2 years</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                            <div>
+                                <h3>Robotics Electric Car</h3>
+                                <p>2 years</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                            <div>
+                                <h3>Arduino Robotics</h3>
+                                <p>1+ years</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                            <div>
+                                <h3>Afro-Carribbean Club</h3>
+                                <p>1+ years</p>
+                            </div>
+                        </article>
+                        <article>
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                            <div>
+                                <h3>Guitar Club</h3>
+                                <p>1+ years</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#projects'"/>
+
+    </section>
+    <section id="projects">
+        <p class="section__text__p1">Browse My Recent</p>
+        <h1 class="title">Projects</h1>
+        <div class="experience-details-container">
+            <div class="about-containers">
+            <div class="details-container color-container">
+                <div class="article-container">
+                    <img src="./assets/image0.jpeg" alt="project 1" class="project-img"/> 
+            </div>
+            <h2 class="experience-sub-title project-title">Project One</h2>
+            <div class="btn-container">
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/amantesf/RFID-LED'">GitHub</button>
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/amantesf/RFID-LED/blob/main/Video_1.mov'">Live Demo</button>
+            </div>
+            </div>
+            </div>
+        <img src="./assets/arrow.png" alt="arrow icon" class="icon arrow" onclick="location.href='./#contact'"/>
+    </section>
+    <section id="contact">
+        <p class="section__text__p1">Get In Touch</p>
+        <h1 class="title">Contact Me</h1>
+        <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+                <img src="assets/email.png" alt="Email icon" class="icon contact-icon email-icon"/>
+                <p><a href="mailto:tesfayee.amanuel@gmail.com">tesfayee.amanuel@gmail.com</a></p>
+            </div>
+            <div class="contact-info-container">
+                <img src="assets/linkedin.png" alt="Linkedin icon" class="icon contact-icon"/>
+                <p><a href="https://www.linkedin.com/in/amanuel-tesfaye-a0704229a/">LinkedIn Profile</a></p>
+            </div>
+        </div>
+    </section>
+    <section id="footer">
+        <footer>
+            <nav>
+             <div class="nav-links-container">
+                    <ul class="nav-links">
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#experience">Experience</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+             </div>
+            </nav>
+        </footer>
+        <p>Copyright &#169; 2024 Amanuel Tesfaye. All Rights Reserved.</p>
     </section>
   <script src="script.js"></script>  
 </body>
